--- a/plugin/locale/zh_CN/LC_MESSAGES/WeatherPlugin.po
+++ b/plugin/locale/zh_CN/LC_MESSAGES/WeatherPlugin.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2-plugins 3.2.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-03 15:02+0000\n"
-"PO-Revision-Date: 2020-05-23 01:56+0800\n"
+"PO-Revision-Date: 2020-05-23 02:09+0800\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: zh_CN\n"
@@ -111,3 +111,6 @@ msgstr "小雨"
 
 msgid "Partly Cloudy"
 msgstr "局部多云"
+
+msgid "Hangzhou, China"
+msgstr "中国杭州"
