--- a/plugin/locale/zh_CN/LC_MESSAGES/WeatherPlugin.po
+++ b/plugin/locale/zh_CN/LC_MESSAGES/WeatherPlugin.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2-plugins 3.2.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-12-03 15:02+0000\n"
-"PO-Revision-Date: 2020-05-23 02:09+0800\n"
+"PO-Revision-Date: 2020-05-24 23:45+0800\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: zh_CN\n"
@@ -89,9 +89,7 @@ msgstr "天气插件: 编辑条目"
 msgid "WeatherPlugin: List of Entries"
 msgstr "天气插件: 条目列表"
 
-msgid ""
-"You need to enter a valid city name before you can search for the location "
-"code."
+msgid "You need to enter a valid city name before you can search for the location code."
 msgstr "在搜索位置代码之前，需要输入有效的城市名称。"
 
 msgid "imperial system"
@@ -103,6 +101,15 @@ msgstr "公制"
 msgid "Sunny"
 msgstr "晴朗"
 
+msgid "Clear"
+msgstr "清爽"
+
+msgid "Mostly Cloudy"
+msgstr "大部多云"
+
+msgid "Rain"
+msgstr "下雨"
+
 msgid "Partly Sunny"
 msgstr "局部晴朗"
 
@@ -111,6 +118,9 @@ msgstr "小雨"
 
 msgid "Partly Cloudy"
 msgstr "局部多云"
+
+msgid "Cloudy"
+msgstr "多云"
 
 msgid "Hangzhou, China"
 msgstr "中国杭州"
